[package]
name = "db-overflow"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.14", features = ["derive", "env"] }
dotenvy = "0.15.6"
indicatif = "0.17.3"
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.2", features = [ "postgres", "runtime-tokio-rustls", "uuid" ] }
strum = "0.24.1"
strum_macros = "0.24.1"
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = [ "fast-rng", "v4" ] }
