[package]
name = "db-overflow"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenvy = "0.15.7"
indicatif = "0.17.8"
itertools = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }
