[package]
name = "db-overflow"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenvy = "0.15.7"
indicatif = "0.18.0"
itertools = "0.14.0"
rand = "0.10.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.8.0", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }
